# moneymoney-cli

./: .flake8  .gitignore  LICENSE  README.md  moneymoney-cli.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
moneymoney_cli/: __main__.py  config.py  moneymoney.py  moneymoneydb.py  relative_date.py  version.py  word_vec.py
