[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moneymoney-cli"
version = "0.1.0"
description = "A CLI for interacting with MoneyMoney and categorize transactions with Machinelearning models"
readme = "README.md"
authors = [{ name = "Dominik Bernhardt", email = "dominik@dokabe.de" }]
license = { file = "LICENSE" }
keywords = ["cli", "money", "finance"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "pandas",
    "scikit-learn",
    "numpy",
    "pysqlcipher3",
    "click",
    "rich",
]

[project.optional-dependencies]
dev = ["black", "flake8", "pytest"]

[project.scripts]
moneymoney-cli = "moneymoney_cli:main"




[tool.black]
line-length = 160
target-version = ['py311']
exclude = '\.git|\.hg|\.mypy_cache|\.tox|\.venv|_build|buck-out|build|dist'

[tool.flake8]
exclude = ["build", "dist", ".venv", "venv"]
max-line-length = 160
ignore = ["E203", "W503"]
